--- a/src/components/Main/Portfolio/Portfolio.css
+++ b/src/components/Main/Portfolio/Portfolio.css
@@ -38,6 +38,7 @@
   display: flex;
   transition: opacity .2s ease-out;
   justify-content: space-between;
+  color: #fff;
 }
 
 .portfolio__link:visited {
