--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -3,20 +3,25 @@
   padding: 0;
   display: grid;
   grid-template-rows: auto auto 1fr auto;
-  align-content: flex-end;
+  grid-template-areas: 'hello' 'form' 'edit' 'logout';
+  align-content: flex-start;
   max-width: 410px;
-  height: calc(100vh - 84px);
+  min-height: calc(100vh - 84px);
+  /* min-height: 100%; */
 }
 
 .profile__greetings {
+  grid-area: hello;
   margin: 0 auto;
-  padding: 74px 0 0;
+  padding: 72px 0 0;
   font-size: 24px;
   font-weight: 500;
 }
 
 .profile__form {
-  margin: 105px 0 80px;
+  grid-area: form;
+  width: 100%;
+  margin: 123px 0 80px;
 }
 
 .profile__stroke {
@@ -48,6 +53,7 @@
 
 .profile__input:focus {
   outline: none;
+  color: #3DDC84;
 }
 
 .profile__input::placeholder {
@@ -55,6 +61,7 @@
 }
 
 .profile__edit {
+  grid-area: edit;
   margin: auto auto 0;
   background: none;
   border: none;
@@ -63,11 +70,17 @@
   font-size: 13px;
   font-weight: 400;
   cursor: pointer;
+  transition: opacity .2s ease-out;
+}
+
+.profile__edit:hover {
+  opacity: .8;
 }
 
 .profile__logout {
+  grid-area: logout;
   display: block;
-  margin: 16px auto 70px;
+  margin: 18px auto 83px;
   padding: 0;
   background: none;
   border: none;
@@ -75,24 +88,51 @@
   font-size: 13px;
   font-weight: 500;
   justify-self: end;
-  cursor: pointer;
+  text-decoration: none;
+  transition: opacity .2s ease-out;
+}
 
+.profile__logout:visited {
+  color: #EE3465;
+}
+
+.profile__logout:hover {
+  opacity: .8;
 }
 
 @media screen and (max-width: 1024px) {
+.profile {
+  grid-template-areas: '.' 'hello' 'form' 'edit' 'logout' '.';
+  grid-template-rows: 1fr repeat(4, auto) 1fr;
+}
+
+.profile__form {
+  margin: 98px auto 210px;
+}
+
   .profile__greetings {
-    padding-top: 236px;
+    padding-top: 0;
   }
 
   .profile__logout {
-    margin-bottom: 269px;
+    margin-bottom: 33px;
   }
 }
 
-@media screen and (max-width: 690px) {
+@media screen and (max-width: 540px) {
   .profile {
+    grid-template-rows: auto auto 1fr auto;
+    grid-template-areas: 'hello' 'form' 'edit' 'logout';
     min-width: 260px;
     padding: 0 30px;
+  }
+
+  .profile__greetings {
+    padding-top: 65px;
+  }
+
+  .profile__form {
+    margin-top: 81px;
   }
 
   .profile__edit {
@@ -101,6 +141,22 @@
   
   .profile__logout {
     font-size: 12px;
-    margin-bottom: 40px
+    margin-bottom: 36px
   }
+}
+
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+
+  -webkit-text-fill-color: #FFF;
+  -webkit-box-shadow: 0 0 0px 1000px rgba(0,0,0,0) inset;
+  transition: background-color 5000s ease-in-out 0s;
 }
