--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -19,3 +19,22 @@
 
 @import url(../NotFound/NotFound.css);
 
+.overlay {
+  display: none;
+  opacity: 0;
+  transition: opacity .8s ease-in;
+}
+
+.overlay_active {
+  position: fixed;
+  display: block;
+  width: 100%;
+  height: 100%;
+  background-color: #000;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  opacity: .3;
+  z-index: 4;
+}
