--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,6 +1,6 @@
 .header {
   margin: 0 auto;
-  padding: 21px 70px;
+  padding: 18px 70px;
   display: grid;
   grid-template-areas: 'logo nav btn';
   grid-template-columns: 1fr 1fr 1fr;
@@ -13,6 +13,11 @@
   padding: 0;
   width: 38px;
   cursor: pointer;
+  transition: opacity .2s ease-out;
+}
+
+.header__logo:hover {
+  opacity: .8;
 }
 
 .header__auth-btns {
@@ -43,6 +48,7 @@
 .header__signin-btn {
   background-color: #3DDC84;
   border-radius: 3px;
+  color: #000;
   cursor: pointer;
   font-size: 12px;
   font-weight: 500;
@@ -81,10 +87,20 @@
   color: #FFF;
   font-size: 13px;
   font-weight: 400;
+  transition: opacity .2s ease-out;
+}
+
+.header__nav-link:hover {
+  opacity: .8;
 }
 
 .header__nav-link_active {
   font-weight: 500;
+  transition: opacity .2s ease-out;
+}
+
+.header__nav-link_active:hover {
+  opacity: .8;
 }
 
 .header__account-btn {
@@ -120,13 +136,17 @@
   display: none;
   cursor: pointer;
   justify-self: flex-end;
+  transition: opacity .2s ease-out;
 }
 
+.header__menu-btn:hover {
+  opacity: .8;
+}
 
 
 @media screen and (max-width: 1024px) {
   .header {
-    padding: 21px 30px;
+    padding: 18px 30px;
     grid-template-columns: 1fr 1fr;
   }
 
