--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -16,6 +16,7 @@
 
 @media screen and (max-width: 690px) {
   .movies-list {
-    max-width: 300px;
+    max-width: 360px;
+    /* min-width: none; */
   }
 }
