--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -1,4 +1,4 @@
-.register {
+/* .register {
   margin: 0 auto;
   padding: 0;
   max-width: 396px;
@@ -83,4 +83,4 @@
 
 .register__text-link {
   color: #4285F4;
-}
+} */
