--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -38,3 +38,13 @@
   opacity: .3;
   z-index: 4;
 }
+
+.no-result {
+  font-size: 12px;
+  line-height: 18px;
+  font-weight: 400;
+  max-width: 460px;
+  margin: 0 auto;
+  text-align: center;
+  padding: 150px 0 70px;
+}
