--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -3,6 +3,7 @@
   list-style: none;
   display: grid;
   max-width: 360px;
+  width: 100%;
   min-width: 300px;
   grid-template-areas: 'img img' 'title duration';
   grid-template-columns: 1fr 80px;
@@ -26,9 +27,10 @@
 
 .movies-card__image {
   max-width: 360px;
+  width: 100%;
   min-width: 300px;
   height: 201px;
-  object-fit: contain;
+  object-fit: cover;
 }
 
 .movies-card__button {
