--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -57,12 +57,8 @@
   color: #3DDC84;
 }
 
-.profile__input::placeholder {
-  color: #FFF;
-}
-
-.profile__input:focus::placeholder {
-  color: #3DDC84;
+.profile__input:invalid {
+  color: #EE3465;
 }
 
 .profile__edit {
@@ -75,11 +71,21 @@
   font-size: 13px;
   font-weight: 400;
   cursor: pointer;
-  transition: opacity .2s ease-out;
+  transition: all .2s ease-out;
 }
 
 .profile__edit:hover {
-  opacity: .8;
+  /* opacity: .8; */
+  color: #3DDC84;
+}
+
+.profile__edit:hover:disabled {
+  opacity: 1;
+}
+
+.profile__edit:disabled {
+  color: #8b8b8b;
+  cursor: auto;
 }
 
 .profile__logout {
@@ -106,14 +112,14 @@
 }
 
 @media screen and (max-width: 1024px) {
-.profile {
-  grid-template-areas: '.' 'hello' 'form' 'edit' 'logout' '.';
-  grid-template-rows: 1fr repeat(4, auto) 1fr;
-}
+  .profile {
+    grid-template-areas: '.' 'hello' 'form' 'edit' 'logout' '.';
+    grid-template-rows: 1fr repeat(4, auto) 1fr;
+  }
 
-.profile__form {
-  margin: 98px auto 210px;
-}
+  .profile__form {
+    margin: 98px auto 210px;
+  }
 
   .profile__greetings {
     padding-top: 0;
@@ -143,7 +149,7 @@
   .profile__edit {
     font-size: 12px;
   }
-  
+
   .profile__logout {
     font-size: 12px;
     margin-bottom: 36px
@@ -152,7 +158,7 @@
 
 
 input:-webkit-autofill,
-input:-webkit-autofill:hover, 
+input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
 textarea:-webkit-autofill,
 textarea:-webkit-autofill:hover,
@@ -162,6 +168,6 @@ select:-webkit-autofill:hover,
 select:-webkit-autofill:focus {
 
   -webkit-text-fill-color: #FFF;
-  -webkit-box-shadow: 0 0 0px 1000px rgba(0,0,0,0) inset;
+  -webkit-box-shadow: 0 0 0px 1000px rgba(0, 0, 0, 0) inset;
   transition: background-color 5000s ease-in-out 0s;
 }
